# fenixrag

./: .coveragerc  Makefile  README.md  client_text.py  docker-compose.yml  env.example  fastcmp.txt  fenix_mcp.txt  header.py  init.sql  pyproject.toml  setup.sh  tools_mcp_server.txt
src/fenix/: __init__.py  main.py
src/fenix/common/: logger.py
src/fenix/config/: __init__.py
src/fenix/data/: sample_documents.py
src/fenix/database/: __init__.py  models.py
src/fenix/embeddings/: gemini_embeddings.py
src/fenix/services/: document_service.py  rag_service.py
tests/: integration_tests.py
tests/integration/: common.py
tests/integration/services/: test_doc_service.py  test_rag_service.py
